# video-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  walkthrough.md
docs/: verification.md
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Engine.cpp  Engine.h  Exporter.cpp  Exporter.h  FFmpegHeaders.h  FFmpegUtils.h  Logger.cpp  Logger.h  MediaClip.h  Timeline.cpp  Timeline.h  VideoDecoder.cpp  VideoDecoder.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  TimelineWidget.cpp  TimelineWidget.h
